--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ font-family: Arial, Helvetica, sans-serif;
 
 .parallax1 {
     position: relative;
-    background-image: url("DSC_0002.jpg") ;
+    background-image: url("../IMG/DSC_0002.jpg") ;
     height: 100%;
     opacity: 0.85;
     background-attachment: fixed;
@@ -68,6 +68,7 @@ font-family: Arial, Helvetica, sans-serif;
     background-repeat: no-repeat;
     background-size: cover;
 }
+
 
 
 
